chore: add build support for newer JDKs (#948)
Signed-off-by: Todd Baert <todd.baert@dynatrace.com>